file(GLOB_RECURSE SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB_RECURSE PGEN_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/pgen/*.cpp)
list(REMOVE_ITEM SRC_FILES ${PGEN_SRCS})

target_include_directories(${PICSIM} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(${PICSIM} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/fields)
target_include_directories(${PICSIM} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/currents)
target_include_directories(${PICSIM} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/particles)
target_include_directories(${PICSIM} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/boundaries)
target_include_directories(${PICSIM} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/exchange)
target_sources(${PICSIM} PRIVATE ${SRC_FILES})
target_link_libraries(${PICSIM} PRIVATE ${FRAMEWORK} ${WRAPPER})

if(${nttiny} STREQUAL "ON")
  target_link_libraries(${PICSIM} PUBLIC nttiny)
endif()
